--- a/manifest.json
+++ b/manifest.json
@@ -2,34 +2,37 @@
     "manifest_version": 2,
     "name": "Nothus-Veille",
     "description": "Outil d'aide à la veille.",
-    "version": "1.0.2",
+    "version": "1.0.5",
     "homepage_url": "https://github.com/JGarderon/Nothus-Veille",
     "icons": {
         "48": "logo.png"
-    },
-
-    "applications": { 
-        "gecko" : { 
-            "id" : "contact@veille.nothus.fr" 
-        }
     }, 
 
     "background": {
         "scripts": [ 
-            "actif.js" 
-        ]
+            "/routines/actif.js" 
+        ] 
     },
 
     "browser_action": { 
         "default_icon": "logo.png" 
-    },
+    }, 
 
     "permissions": [
         "storage", 
+        "unlimitedStorage", 
+        "notifications", 
         "tabs", 
         "webRequest", 
         "downloads", 
+        "bookmarks", 
         "<all_urls>" 
-    ]  
+    ], 
 
-}
+    "content_scripts": [ 
+        { 
+            "matches": ["<all_urls>"], 
+            "js": ["/routines/recherche-flux.js"]
+        } 
+    ] 
+} 
