(version 1.1) sortie du mode expérimentale, enregistrement des recherches sous formes de vues, classement des flux par secteurs, gabarit XML entièrement opérationnel et une très forte amélioration génale, avec débug et créations d'outils de gestion

--- a/manifest.json
+++ b/manifest.json
@@ -2,17 +2,15 @@
     "manifest_version": 2,
     "name": "Nothus-Veille",
     "description": "Outil d'aide à la veille.",
-    "version": "1.0.5",
+    "version": "1.1",
     "homepage_url": "https://github.com/JGarderon/Nothus-Veille",
-    "icons": {
+    "icons": { 
         "48": "logo.png"
     }, 
 
-    "background": {
-        "scripts": [ 
-            "/routines/actif.js" 
-        ] 
-    },
+    "background": { 
+        "page": "./routines/routines.html" 
+    }, 
 
     "browser_action": { 
         "default_icon": "logo.png" 
